[package]
name = "typetest"
version = "0.1.0"
authors = ["aml360 <aml360esp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = "1.0.129"
serde_json = "1.0.66"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
