cargo-features = ["strip"]

[package]
name = "unsafe_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
strip = 'symbols'
codegen-units = 1
overflow-checks = false

[dependencies]
